fix: icon appears above select field's option list
When you have date field below the select field, the icon of the date field appears above the option list

--- a/src/admin/components/elements/DatePicker/index.scss
+++ b/src/admin/components/elements/DatePicker/index.scss
@@ -10,7 +10,7 @@ $cal-icon-width: 18px;
 
   &__icon-wrap {
     position: relative;
-    z-index: 2;
+    z-index: 1;
 
     .icon {
       pointer-events: none;
